--- a/posts/learning/neuroscience_for_parents/neuroscience.qmd
+++ b/posts/learning/neuroscience_for_parents/neuroscience.qmd
@@ -311,29 +311,43 @@ How to punish:
 
 ## 3.4. Parenting Styles
 
-Childhood is a lab where kids are able to experiment without having to experience the full consequences that they would as an adult. This experimentation is crucial for their development. They need to experience things for themselves, both positive and negative. 
+### 3.4.1. When to Intervene
+**Childhood is a lab where kids are able to experiment without having to experience the full consequences that they would as an adult.** This experimentation is crucial for their development. They need to experience things for themselves, both positive and negative. 
 
-When parents intervene too much, they deny children the opportunity to experiment. By trying to make things easier in the short term, we make things harder in the long term. 
-The subconscious message you’re sending is that they are not capable of doing things themselves, they need permission from someone else before they can do the things that interest them. This is what psychologists call “learned helplessness”. 
+When parents intervene too much, they deny children the opportunity to experiment. By trying to make things easier in the short-term, we make things harder in the long-term. 
+The subconscious message you’re sending is that they are not capable of doing things themselves, they need permission from someone else before they can do the things that interest them. This is what psychologists call **“learned helplessness”**. 
 
 We should help, just **not right away**. 
 
-Attachment theory. 
-What kids need most is safety and exploration. The more secure a person feels at home, the more likely they are to venture out and try new things. Attachment even at age 1 is a strong predictor of future attainment and relationships later in life. 
+### 3.4.2. Attachment Theory
 
-There is no one correct parenting style. Lenient vs authoritarian doesn’t seem to affect the attachment. 
+What kids need most is safety and exploration. The more secure a person feels at home, the more likely they are to venture out and try new things. 
+
+Attachment even at age 1 is a strong predictor of future attainment and relationships later in life. 
+
+There is no single "correct" parenting style. Lenient vs authoritarian doesn’t seem to affect the attachment level.
 
 It’s ok to screw up from time to time. Children aren’t so fragile that one misstep will ruin them. The overall pattern of care needs to be reliable and predictable. We are also not the only relationship in their life. They can learn lessons from extended family, teachers, friends etc. 
 
 
 Types of attachment:
 
-- Securely attached. Parents are attuned to the child’s desires and mirror their moods; parents calm the child when they are anxious or sad, play with them when they are happy. 
-- Avoidantly attached. Parents are emotionally withdrawn and psychologically unavailable. Lack of communication and affection. The child learns that they have to take care of themselves. The child will become independent but struggle to make relationships. They suffer from anxiety and are unsure in social situations, they withdraw before others get too close. 
-- Ambivalent / disorganised attached. Parents are inconsistent; they are sometimes present and loving, then disappear for a while. Children grow up to be more fearful and struggle to control impulses. 
+- **Securely attached**. 
+  - Parents are attuned to the child’s desires and mirror their moods
+  - Parents calm the child when they are anxious or sad, play with them when they are happy. 
+- **Avoidantly attached**. 
+  - Parents are emotionally withdrawn and psychologically unavailable. 
+  - Lack of communication and affection. 
+  - The child learns that they have to take care of themselves. 
+  - The child will become independent but struggle to make relationships. They suffer from anxiety and are unsure in social situations, they withdraw before others get too close. 
+- **Ambivalent / disorganised attached**. 
+  - Parents are inconsistent; they are sometimes present and loving, then disappear for a while. 
+  - Children grow up to be more fearful and struggle to control impulses. 
 
 
-## You Child Has Personality 
+## 3.5. Your Child Has Personality
+
+> “Let them become who they are”. 
 
 The genes you pass on are not the sole determinant of how your child ends up. 
 
@@ -350,55 +364,54 @@ The baby only know 4 experiences:
 The things that trigger these responses are things like noises in the environment, how long they cry before being soothed, etc. 
 
 
-Which category does your child fall under? This determines what their intrinsic motivations are, and we should encourage choices that support these primary motivations. 
+Which category does your child fall under? This determines what their intrinsic motivations are, and we should encourage choices that *support these primary motivations*. 
 
 It can be easy to project our own motivations on to others and encourage kids to do the things we like. These become the child’s extrinsic motivations. Some people can eventually become successful in things they don’t really like, but they won’t achieve joy, fulfilment or happiness. 
 
-Being overbearing and cheering them on too much can turn an intrinsic motivation into an extrinsic motivation. They initially love something, but then just carry on doing it because they get praised for it. 
+Being overbearing and cheering them on too much can *turn an intrinsic motivation into an extrinsic motivation*. They initially love something, but then just carry on doing it because they get praised for it. 
 
-“Parents will do anything for their kids except let them be themselves” - Banksy
-
+> “Parents will do anything for their kids except let them be themselves” 
+> - Banksy
 
 Let the child experience life as much as possible. Don’t restrict too much, don’t push too much, just let them be. 
 
-“Let them become who they are”. 
 
+## 3.6. Mindsets
 
-## Mindsets
+The idea of fixed mindset vs growth mindset comes from Carol Dweck.
 
-Fixed mindset vs growth mindset. (Carol Dweck)
+- **Fixed** mindset focuses on results. 
+- **Growth** mindset focuses on effort, experimentation. Enjoying the process. 
 
-- Fixed mindset focuses on results. 
-- Growth mindset focuses on effort, experimentation. Enjoying the process. 
-
-The outcome might still be the same, but the different is how you feel about the outcome. 
-If you fail an exam after studying hard, with a fixed mindset you’ll be miserable and beat yourself up. With a growth mindset you’ll see the positives and try again. 
+The outcome might still be the same, but the difference is how you feel about the outcome. 
+If you fail an exam after studying hard, with a fixed mindset you’ll be miserable and beat yourself up. With a growth mindset, you’ll see the positives and try again. 
 
 A growth mindset is crucial to put in the sustained effort required for real success. 
 
 
-## Compliments
+## 3.7. Compliments
 
 Whatever you praise your child for reinforces that behaviour. If you praise your child for working hard, they’ll learn to persevere. If you praise them for being smart, they’ll believe success is something you’re born with and quit when things feel difficult, taking fewer risks to avoid looking stupid. 
 
-Praise effort not inborn traits. 
+**Praise effort** not inborn traits. 
 
-Don’t overdo it. The brain gets used to it and needs more and more of it to get the same dopamine hit. They may also start to love the praise more than the activity, making them turn away from activities that interest them unless they’re being praised. 
-
-
-## Small Social Traumas
-
-Never ridicule your child, and especially not in public. 
-
-Children are not mini adults. They are emotionally vulnerable and lack the tools to process ridicule. 
-
-Before the age of 17, the prefrontal cortex is not mature enough to put things into perspective and deal with being ridiculed. Their brain will experience the negative effects and learn to do everything it can do avoid being put in that situation ever again. They learn to avoid not address. This becomes an avoidance and compensation mechanism. 
+Don’t *overdo* it. The brain gets used to it and needs more and more of it to get the same dopamine hit. They may also start to love the praise more than the activity, making them turn away from activities that interest them unless they’re being praised. 
 
 
-After 17, we don’t develop new compensation mechanisms as we are then able to process these small social traumas. 
+## 3.8. Small Social Traumas
+
+**Never ridicule** your child, and especially not in public. 
+
+Children are not mini-adults. They are emotionally vulnerable and lack the tools to process ridicule. 
+
+Before the age of 17, the prefrontal cortex is not mature enough to put things into perspective and deal with being ridiculed. Their brain will experience the negative effects and learn to do everything it can do avoid being put in that situation ever again. They learn to *avoid not address*. This becomes an **avoidance and compensation mechanism**. 
+
+After age 17, we don’t develop new compensation mechanisms as we are then able to process these small social traumas. 
 
 
-# Prefrontal Brain
+# 4. Prefrontal Brain
+
+## 4.1. Its Function
 
 This is the part of the brain mostly unique to humans; other mammals have one but ours is huge in comparison. 
 
@@ -410,7 +423,8 @@ At least it should be, but often we get spooked and one of the other parts of th
 Feeling calm and in control is a sign our prefrontal brain is active. 
 
 
-## Techniques to Stay Calm
+## 4.2. Techniques to Stay Calm
+
 These techniques force the prefrontal brain to activate. This helps when your primal brain is taking charge and you subconsciously see your children as a “threat”. 
 
 
@@ -418,11 +432,11 @@ These techniques force the prefrontal brain to activate. This helps when your pr
 2. Look at the situation and imagine how it could be worse. 
 
 
-## Learning
+## 4.3. Learning
 
-Parents and community have a greater effect achievement than school. 
+Parents and community have a greater effect on achievement than school. 
 
-The best approach to learning is to force them to get things wrong. 
+The best approach to learning is to **force them to get things wrong**. 
 
 Retrieving information strengthens the neural pathways in their brain. Let them fail with you. 
 
@@ -431,43 +445,50 @@ Repeating something ~6 times helps it stick. Better to do this as phased repetit
 Sleep is crucial to consolidate memories and neural pathways. 
 
 
-## Adolescence 
+## 4.4. Adolescence 
+
+### 4.4.1. The Adolescent Brain
 
 It would be easy to explain away the changes in behaviour during adolescence as “their brains aren’t fully mature”. But this isn’t the whole story. 
 
-Our brains are 90% of their full size by age 6. From 12 onwards, the brain goes through a “rewiring” process from rear to front. 
+Our brains are 90% of their full size by age 6. From 12 onwards, the brain goes through a “rewiring” process from rear to front called myelination. 
 
 Kids are not mini-adults, but teens are not children. They need to be treated differently during adolescent years than when they were a child. 
 
-Ask yourself: are your children there to attend to your emotional needs, or are you there to attend to theirs?
+Ask yourself: are your children there to attend to your emotional needs, or are you there to attend to theirs? The answer should be clear.
 
 Adolescence is not cultural, it’s in our genes. The purpose is to produce a person primed to leave a safe home and move into unfamiliar territory. 
 
 
 The adolescent brain becomes very sensitive to:
 
-- Dopamine. Reward hormone. It explains why teenagers learn fast, but also why success and defeat are met with extreme emotions. It is why they take risks; this is different from impulsivity which drops from age 6. An example of the distinction is planning a bungee jump - risky but not impulsive. 
-- Oxytocin. Responsible for bonding. It explains why friendship is so important during adolescence. 
+- Dopamine. 
+  - Reward hormone. 
+  - It explains why teenagers learn fast, but also why success and defeat are met with extreme emotions. 
+  - It is why they take risks; this is different from impulsivity which drops from age 6. An example of the distinction is planning a bungee jump - risky but not impulsive. 
+- Oxytocin. 
+  - Responsible for bonding. 
+  - It explains why friendship is so important during adolescence. 
 
-The result of the two is someone socially active, sensitive to peer pressure, looking to meet new people and try new things. 
+The result of the two hormones is someone socially active, sensitive to peer pressure, looking to meet new people and try new things. 
 
-Teenagers understand risk as well as adults. The reason for higher risk taking isn’t a lack of understanding the consequences, it’s that they weigh the risk vs reward differently. The dopamine makes the reward hit harder. 
+Teenagers *understand* risk as well as adults. The reason for higher risk taking isn’t a lack of understanding the consequences, it’s that they weigh the risk vs reward differently. The dopamine makes the reward hit harder. Their utility function is steeper.
 
 
-### How to parent a teen
+### 4.4.2. How to Parent a Teen
 
-They still need a framework of rules and structure, but one that gradually expands as they mature. 
+They still need a framework of rules and structure, but one that gradually **expands** as they mature. 
 
 The paleolimbic brain is often active, leading to territorial clashes. 
-A light but steady hand when parenting, staying connected but allowing independence. Clearly define the rules and consequences for breaking the rules. Negotiate the rules, don’t impose them. Revisit the rules periodically, every 6 months. 
+A light but steady hand when parenting, staying connected but allowing independence. 
+Clearly define the rules and consequences for breaking the rules. *Negotiate* the rules, don’t impose them. Revisit the rules periodically, every 6 months. 
 
 Make sure they sleep enough because sleep health is so important to brain development and overall health. 
 
 
-## Screen Time
+## 4.5. Screen Time
 
-Children, and everybody more generally, spend a lot of time looking at screens. Screens are designed for dopamine hits. 
-
+Children, and everybody in general, spend a lot of time looking at screens. Screens are designed for dopamine hits. 
 
 One of the arguments in favour of screen time is essentially peer pressure - they’re going to need to know how to use technology so they better start now. 
 
@@ -479,30 +500,26 @@ The effects of screens on the brain:
 - Reduced cortical thickness
 - Impaired cognitive function 
 
-
 There are also links with attention issues and depression. 
 
+There is also the opportunity cost of what they could otherwise be doing: playing, socialising, learning. These alternative activities would develop motor skills and social skills.
 
-There is also the opportunity cost of what they could otherwise be doing: playing, socialising, learning. These alternative activities would develop:
-
-- Motor skills
-- Social skills
-- 
 
 There is also the issue of sleep deprivation, both from the constant dopamine hits making it harder to fall asleep, and the blue lights in screens. 
 
 
 Recommendations:
+
 - Limit screen time to <2 hours a day. None at all for children under 2 years old, some say 3 years old. 
 - It’s easier to “quit” when you haven’t started in the first place. Prevention is the best cure. Don’t allow many screens in the first place then excessive screen time won’t be as much of an issue. 
 
 
-## Grit
+## 4.6. Grit
 
 The capacity to continue when things get tough. 
 
 
-This is a bigger predictor for “success” than IQ or education. The average IQ for Nobel peace prize winners is 121. 
+This is a bigger predictor for “success” than IQ or education. The average IQ for Nobel peace prize winners is "only" 121. 
 
 Delayed gratification, growth mindset, learned helplessness are all related to grit. When you encounter an obstacle, do you give up or try harder?
 
@@ -511,7 +528,7 @@ Kids need to fail to learn how to respond to failure. Love the process.
 
 Adversity in childhood can help develop grit, but it can also lead to learned helplessness. The difference is the **perception of control**. Where they feel they can influence the outcome, they are more likely to continue trying. Where they feel like it was beyond their control, they are likely to give up. 
 
-We need to be demanding **and** supportive. The demands should grow with their ability (and hence age). Recall the Pygmalion Effect. Remind them to try harder, try differently. 
+We need to be **demanding and supportive**. The demands should grow with their ability (and hence age). Recall the Pygmalion Effect. Remind them to try harder, try differently. 
 
 Our brains evolved for instant gratification and energy efficiency. This manifests as short-term thinking and laziness. So we are fighting an uphill battle against their ingrained nature to encourage children to try doing hard things. 
 
@@ -520,41 +537,51 @@ If they do a bad job and didn’t try, be straight with them. Your job as parent
 
 
 
-# Conclusion
+# 5. Conclusion
 
-## The Perfect Parent Myth
+## 5.1. The Perfect Parent Myth
 
 You can’t (and shouldn’t try to!) protect your kids from everything. Learning how to deal with failure and pain is one of the most important lessons you can teach them.  
 
-Don’t hold yourself to impossibly high standards. One of the groups most at risk of burnout is stay at home parents of small kids. 
+Don’t hold yourself to impossibly high standards. One of the groups most at risk of burnout is stay-at-home parents of small kids. 
 
 
-## It Takes a Village
-You are an important person in your child’s life, but you are not the only person. They will be influenced by parents, extended family, friends, teachers, sports coaches, music teachers, etc. 
+## 5.2. It Takes a Village
+
+You are an important person in your child’s life, but you are not the *only* person. 
+They will be influenced by parents, extended family, friends, teachers, sports coaches, music teachers, etc. 
 
 It can help to shift the narrative from “I am raising my child” to “I am assembling the team of people who will influence them”. You are a coach, not a player trying to play every position. 
 
 The child may express parts of their personality in different ways with different people. 
 
 
-## The Birth Order Effect
+## 5.3. The Birth Order Effect
 
 You raise all your children the same and they turn out differently. WTF?
 
 The simple fact of having siblings, older and younger, affects our personality. This is called the “birth order effect”. 
 
-1. First child. Will automatically get more attention from parents, because there are no other children to divert attention, and the desire to be a “perfect parent” the first time around (before you realise this is a myth). The child will commonly be: reliable, conscientious, controlling, achievers, perfectionists, competitive mindset. 
-2. Middle child. Parents’ attitudes become more relaxed. The middle child gets less attention than any other; first-born gets it at the start, then younger children afterwards. The child will commonly be: people pleasers, rebellious, thrive on friendship, large social circle, peacemakers. A caveat to “middle child syndrome” is when the first and middle children are different sexes, then they might be given attention in different ways. 
-3. Last born. The parents have loosened the reigns completely. The child tends to be: fun loving, uncomplicated, manipulative, outgoing, attention seeking, self-centred
+1. First child. 
+  - Will automatically get more attention from parents, because there are no other children to divert attention, and the desire to be a “perfect parent” the first time around (before you realise this is a myth). 
+  - The child will commonly be: reliable, conscientious, controlling, achievers, perfectionists, competitive mindset. 
+2. Middle child. 
+  - Parents’ attitudes become more relaxed. 
+  - The middle child gets less attention than any other; first-born gets it at the start, then younger children afterwards. 
+  - The child will commonly be: people pleasers, rebellious, thrive on friendship, large social circle, peacemakers. 
+  - A caveat to “middle child syndrome” is when the first and middle children are different sexes. Then they might be given attention in different ways. 
+3. Youngest child. 
+  - The parents have loosened the reigns completely. 
+  The child tends to be: fun loving, uncomplicated, manipulative, outgoing, attention seeking, self-centred.
 
-With an only child, there are similar characteristics to the first child but more extreme. They tend to also be mature for their age. 
+With an only child, there are similar characteristics to the first child but more extreme. They also tend to be mature for their age. 
 
 These aren’t hard and fast rules, and things like twins, adoption or large gaps between children can change the dynamics considerably. 
 
-So even if you feel like you are raising your children the same way, it’s impossible to do so. 
+So even if you feel like you are raising your children the same way, *it’s impossible to do so*. 
 
 
-## The Golden Rules
+## 5.4. The Golden Rules
 
 The important ingredients for brain development are:
 
@@ -569,11 +596,10 @@ Golden rules:
 - Within this framework, let them experiment
 - Avoid small social traumas 
 
-The best way to deal with the primal brain is to take away the perceived danger. Communicate on the level of emotions, not necessarily always rationality. 
 
-Remember the techniques to deal with stress: imagine looking back on this moment in 10 years time, and also imagine how it could be worse. 
+The best way to deal with the primal brain is to *take away the perceived danger*. Communicate on the level of emotions, not always rationality. 
 
-
+Remember the techniques to deal with stress: imagine looking back on this moment in 10 years time, and also imagine how it could have been worse. 
 
 
 # References
