Finish time spreads

--- a/posts/energy/derivatives/time_spreads.qmd
+++ b/posts/energy/derivatives/time_spreads.qmd
@@ -30,6 +30,25 @@ Describing the spread as 'THE/TTF' means we are thinking about the THE price rel
 
 When future delivery periods are worth less than the period preceding it, the structure is known as Backwardation. Conversely, the market structure is in Contango when future delivery periods are higher in price.
 
+Time spreads are always quoted chronologically. Contango markets are characterised by negative time spreads. 
+
+
 ## Backwardation
 Some people misinterpret this structure and conclude that it means prices will be lower in the future. This is an incorrect assumption. It indicates that there is an undersupply in the prompt (delivery) market, meaning that participants are prepared to pay a premium for the delivery of a commodity today at the expense of future delivery periods.
 
+![Forward curve in backwardation](backwardation.png)
+
+
+## Contango
+Contango market structures are characterised by negative time spreads; each contract period is followed by another where the price is higher. It is a structure that is symptomatic of a well-supplied/oversupplied market, with low prices close to delivery gradually increasing into the future. Contango markets are generally bearish, with weak fundamentals because of the oversupply.
+
+![Forward curve in contango](contango.png)
+
+
+## Trading time spreads
+
+Due to correlation, the individual contracts will move together to some extent, but one will be impacted more than the other, affecting the spread.
+
+The news will always impact both legs of a spread, but the impact of fundamental supply and demand changes will be felt most by the one closest to the event.
+
+Time spreads are very commonly used instead of flat price by fundamental traders. Suppose a trader can't predict the overall direction of a commodity because speculation is having a greater impact than fundamentals. In that case, they can trade the front spread, as it should reflect the fundamentals with less impact from speculation.
